Refactor to use GitHub API instead of git
Closes #8, Closes #1

commit 02eefd2ec70bf8a07e667d13a4e33dc70dd9db96
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Wed Jan 4 18:25:30 2017 +0100

    Refactor updates

commit e9330e41a3388879ef300f40d8843210c70e2b31
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Wed Jan 4 18:25:17 2017 +0100

    Improve commenting

commit 2feb32f218a83ec765732280af8b0d9e569fb313
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Wed Jan 4 13:34:36 2017 +0100

    Refactor token input

commit 28b4428bae8cdafffe0227e794e8f77a5be2fcfd
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Wed Jan 4 13:28:09 2017 +0100

    Rename files

commit 2fe98be1b31b27f625023ffb748f36c3a0eefee6
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Wed Jan 4 13:21:52 2017 +0100

    Improve error log

commit e6f0e691945e561c458147f52b02903ba82373d7
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Mon Dec 19 19:20:53 2016 +0100

    Support custom package.json path

commit 5f971746d3abe2a40b94cae3b8592ec97b21358e
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Mon Dec 19 19:20:40 2016 +0100

    Handle null dependencies or devDependencies

commit 9eac59859626bc7d40cacb1e93e645973667208c
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Mon Dec 19 18:23:14 2016 +0100

    Split per branch

commit 61d7337e813b86d186511fdb6ad0655b6110942f
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Mon Dec 19 18:22:59 2016 +0100

    Ignore unstable

commit d4d8bcf0895046b5d13f8dea93dbb30121f9be7c
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Mon Dec 19 18:22:10 2016 +0100

    Pin

commit 4b9306b8072726b2eed74a0f56a4687c865539a4
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Mon Dec 19 11:55:47 2016 +0100

    Add new

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "private": true,
   "dependencies": {
-    "got": "^6.6.3",
-    "mkdirp": "^0.5.1",
-    "nodegit": "^0.16.0",
-    "rimraf": "^2.5.4",
-    "semver": "^5.3.0"
+    "gh-got": "5.0.0",
+    "got": "6.6.3",
+    "mkdirp": "0.5.1",
+    "nodegit": "0.16.0",
+    "rimraf": "2.5.4",
+    "semver": "5.3.0",
+    "semver-stable": "2.0.4"
   }
 }
