Support multiple repositories
Also closes #3

commit 725de26fe331470f9fe3d17bad4c365ff8772443
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Tue Jan 10 13:32:07 2017 +0100

    Improve console messages

commit 28ec77634b86ddb7ed8410053d671bad59133058
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Tue Jan 10 12:25:26 2017 +0100

    Refactor github helper

commit 5cd2cf8eb7049868b0d1bc0d225a6cc490ec3317
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Tue Jan 10 11:20:27 2017 +0100

    Support multiple repos

commit 52e531c13078e448cecb651b94ce76e24df3d60d
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Tue Jan 10 11:19:24 2017 +0100

    Hardcode base branch

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "private": true,
   "dependencies": {
+    "better-console": "1.0.0",
+    "colors": "1.1.2",
     "gh-got": "5.0.0",
     "got": "6.6.3",
     "lodash": "4.17.4",
+    "manakin": "0.4.6",
     "mkdirp": "0.5.1",
     "nodegit": "0.16.0",
     "rimraf": "2.5.4",
