--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "rimraf": "2.5.4",
     "semver": "5.3.0",
     "semver-stable": "2.0.4"
+  },
+  "devDependencies": {
+    "eslint": "3.13.1",
+    "eslint-config-airbnb-base": "11.0.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-promise": "3.4.0"
   }
 }
