--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "gh-got": "5.0.0",
     "got": "6.7.1",
     "lodash": "4.17.4",
-    "manakin": "0.4.6",
     "semver": "5.3.0",
-    "semver-stable": "2.0.4"
+    "semver-stable": "2.0.4",
+    "winston": "2.3.0"
   },
   "devDependencies": {
     "eslint": "3.13.1",
