--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "renovate",
   "description": "Keep npm dependencies up-to-date.",
   "version": "1.1.0",
-  "main": "src/index.js",
+  "main": "renovate.js",
   "scripts": {
     "lint": "eslint .",
-    "start": "node src",
+    "start": "node renovate",
     "test": "eslint ."
   },
   "repository": {
