Set engines in package.json

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "https://github.com/singapore/renovate/issues"
   },
   "homepage": "https://github.com/singapore/renovate#readme",
+  "engines" : { "node" : ">=6.9.0" },
   "dependencies": {
     "gh-got": "5.0.0",
     "got": "6.7.1",
