--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node": ">=6.9.0"
   },
   "dependencies": {
-    "changelog": "singapore/changelog",
+    "changelog": "singapore/changelog#1.0.7.1",
     "gh-got": "5.0.0",
     "got": "6.7.1",
     "lodash": "4.17.4",
