--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "renovate",
   "description": "Keep npm dependencies up-to-date via Pull Requests",
   "version": "1.1.2",
-  "main": "renovate.js",
+  "main": "app/index.js",
   "scripts": {
     "lint": "eslint .",
-    "start": "node renovate",
+    "start": "node app",
     "test": "eslint ."
   },
   "repository": {
