Add tests for package-json
commit 8e72ab18f39f6e177757e1442e9f491d22982e58
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Thu Jan 12 09:33:33 2017 +0100

    Remove use strict

commit 3d13fa9e69b0050ba211128b8b73d210eb0b549a
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Thu Jan 12 09:31:22 2017 +0100

    Add circle.yml

commit d5fad78f3847f8b384a508d3ab6e4cd19939be4e
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Thu Jan 12 09:28:58 2017 +0100

    Try use strict

commit 32ed86bfb6e04fe4270381dc3faa1184192a6f91
Author: Rhys Arkins <rhys@keylocation.sg>
Date:   Thu Jan 12 09:12:46 2017 +0100

    Add package-json tests

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node app",
-    "test": "eslint ."
+    "test": "mocha --recursive --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -36,9 +36,11 @@
     "winston": "2.3.0"
   },
   "devDependencies": {
+    "chai": "3.5.0",
     "eslint": "3.13.1",
     "eslint-config-airbnb-base": "11.0.1",
     "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-promise": "3.4.0"
+    "eslint-plugin-promise": "3.4.0",
+    "mocha": "3.2.0"
   }
 }
