--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "renovate",
   "description": "Keep npm dependencies up-to-date via Pull Requests",
   "version": "1.1.2",
+  "bin": "./app/index.js",
   "main": "app/index.js",
   "scripts": {
     "lint": "eslint app",
