--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "changelog": "singapore/changelog",
+    "commander": "2.9.0",
     "gh-got": "5.0.0",
     "got": "6.7.1",
     "lodash": "4.17.4",
