--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "renovate",
   "description": "Keep npm dependencies up-to-date via Pull Requests",
   "version": "2.3.0",
-  "bin": "./app/index.js",
-  "main": "app/index.js",
+  "bin": "./lib/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "eslint": "eslint app",
-    "eslint-fix": "eslint app --fix",
+    "eslint": "eslint lib",
+    "eslint-fix": "eslint lib --fix",
     "istanbul": "istanbul cover _mocha test",
     "mocha": "mocha test",
-    "start": "node app",
+    "start": "node lib",
     "test": "npm run eslint && npm run istanbul"
   },
   "repository": {
