--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "outdated",
     "update"
   ],
-  "author": "Rhys Arkins <rhys@keylocation.sg>",
+  "author": "Rhys Arkins <rhys@arkins.net>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/singapore/renovate/issues"
