--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "node": ">=6.9.0"
   },
   "dependencies": {
-    "changelog": "singapore/changelog",
+    "changelog": "dylang/changelog#v1.2.0",
     "commander": "2.9.0",
     "gh-got": "5.0.0",
     "got": "6.7.1",
