--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "eslint": "eslint --ignore-path .gitignore .",
     "eslint-fix": "eslint --ignore-path .gitignore --fix .",
+    "heroku-push": "git push heroku master",
+    "heroku-scheduler": "heroku addons:open scheduler",
     "istanbul": "istanbul cover _mocha test",
     "mocha": "mocha test",
     "renovate": "node renovate",
