--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "commander": "2.9.0",
     "gh-got": "5.0.0",
     "got": "6.7.1",
+    "handlebars": "4.0.6",
     "lodash": "4.17.4",
     "semver": "5.3.0",
     "semver-stable": "2.0.4",
