--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
     "np": "2.12.0"
+  },
+  "renovate": {
+    "labels": ["ready"],
+    "assignees": ["rarkins"]
   }
 }
