--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "renovate",
   "description": "Keep npm dependencies up-to-date via Pull Requests",
-  "version": "7.3.0",
+  "version": "7.3.1",
   "bin": "renovate.js",
   "main": "lib/index.js",
   "scripts": {
@@ -58,7 +58,11 @@
     "np": "2.12.0"
   },
   "renovate": {
-    "labels": ["ready"],
-    "assignees": ["rarkins"]
+    "labels": [
+      "ready"
+    ],
+    "assignees": [
+      "rarkins"
+    ]
   }
 }
