--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "handlebars": "4.0.6",
     "json-stringify-pretty-compact": "1.0.2",
     "lodash": "4.17.4",
+    "registry-auth-token": "3.1.0",
+    "registry-url": "3.1.0",
     "semver": "5.3.0",
     "semver-stable": "2.0.4",
     "winston": "2.3.1"
