--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "bin": "dist/renovate.js",
   "main": "dist/index.js",
   "scripts": {
+    "build": "npm run transpile",
     "eslint": "eslint --ignore-path .gitignore .",
     "eslint-fix": "eslint --ignore-path .gitignore --fix .",
     "heroku-push": "git push heroku master",
@@ -12,8 +13,8 @@
     "istanbul": "istanbul cover _mocha test",
     "mocha": "mocha test",
     "npm-publish": "npm run update-docs && np",
-    "prepublish": "npm run transpile",
-    "pretest": "npm run transpile",
+    "prepublish": "npm run build",
+    "pretest": "npm run build",
     "start": "node dist/renovate",
     "start-babel": "babel-node lib/renovate",
     "start-raw": "node --harmony-async-await lib/renovate",
