--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "registry-url": "3.1.0",
     "semver": "5.3.0",
     "semver-stable": "2.0.4",
+    "semver-utils": "1.1.1",
     "tmp": "0.0.31",
     "winston": "2.3.1"
   },
