--- a/package.json
+++ b/package.json
@@ -63,10 +63,13 @@
     "chai": "3.5.0",
     "eslint": "3.19.0",
     "eslint-config-airbnb-base": "11.1.3",
+    "eslint-config-prettier": "1.7.0",
     "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-prettier": "2.0.1",
     "eslint-plugin-promise": "3.5.0",
     "mkdirp": "0.5.1",
     "np": "2.13.2",
+    "prettier": "1.2.2",
     "rimraf": "2.6.1"
   },
   "babel": {
