--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "handlebars": "4.0.10",
     "jest": "20.0.4",
     "json-stringify-pretty-compact": "1.0.4",
+    "jsonwebtoken": "7.4.1",
     "lodash": "4.17.4",
     "registry-auth-token": "3.3.1",
     "registry-url": "3.1.0",
