Specify npm version in package.json > engines (#251)

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "homepage": "https://github.com/singapore/renovate#readme",
   "engines": {
-    "node": ">=6.9.0"
+    "node": ">=6.9.0",
+    "npm": "5"
   },
   "dependencies": {
     "babel-jest": "20.0.3",
