Add jest and eslint package groups (#256)

--- a/package.json
+++ b/package.json
@@ -99,6 +99,16 @@
     "assignees": [
       "rarkins"
     ],
-    "automerge": "minor"
+    "automerge": "minor",
+    "packages": [
+      {
+	      "packagePattern": "jest",
+	      "groupName": "jest"
+	    },
+	    {
+	      "packagePattern": "eslint",
+	      "groupName": "eslint"
+	    }  
+    ]
   }
 }
