--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "bin": "dist/renovate.js",
   "main": "dist/index.js",
   "scripts": {
-    "build": "yarn run transpile",
+    "build": "npm run transpile",
     "heroku-push": "git push heroku master",
     "heroku-scheduler": "heroku addons:open scheduler",
+    "jest": "jest",
     "lint-fix": "eslint --ignore-path .gitignore --fix .",
-    "prepublish": "yarn run build",
+    "lint": "eslint --ignore-path .gitignore .",
+    "np": "np",
+    "prepublish": "npm run build",
     "start": "node dist/renovate",
     "start-babel": "babel-node lib/renovate",
     "start-raw": "node lib/renovate",
     "test-dirty": "git diff --exit-code",
-    "test-lint": "eslint --ignore-path .gitignore .",
-    "test-unit": "jest",
-    "test": "yarn run test-dirty && yarn run test-lint && yarn run test-unit",
+    "test": "npm run lint && npm run jest",
     "transpile": "rimraf dist && mkdirp dist && babel lib --out-dir dist",
     "update-docs": "bash bin/update-docs.sh"
   },
