Add stale PR rebase to renovate config

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
       "rarkins"
     ],
     "automerge": "minor",
+    "rebaseStalePrs": true,
     "packages": [
       {
         "packagePattern": "jest",
