--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "bunyan": "1.8.10",
+    "chalk": "1.1.3",
     "changelog": "1.3.0",
     "commander": "2.9.0",
     "gh-got": "6.0.0",
