--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "semver": "5.3.0",
     "semver-stable": "2.0.4",
     "semver-utils": "1.1.1",
-    "tmp": "0.0.31"
+    "tmp": "0.0.31",
+    "traverse": "0.6.6"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
