--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "changelog": "1.3.0",
     "commander": "2.10.0",
     "gh-got": "6.0.0",
+    "github-url-from-git": "1.5.0",
     "gl-got": "7.0.0",
     "got": "7.0.0",
     "handlebars": "4.0.10",
