refactor: Add semantic release to CircleCI (#384)
* Reset version to 0.0.0-semantic-release
* Add semantic-release and condition-circle
* Add circleci deployment config

--- a/circle.yml
+++ b/circle.yml
@@ -20,3 +20,9 @@ test:
     - npm test
   post:
     - bash <(curl -s https://codecov.io/bash)
+
+deployment:
+  npm:
+    branch: master
+    commands:
+      - npm run semantic-release
