--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     ],
     "automerge": "minor",
     "rebaseStalePrs": true,
+    "semanticCommits": true,
     "packages": [
       {
         "packagePattern": "jest",
