chore: remove jest caching (#398)

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     ]
   },
   "jest": {
-    "cacheDirectory": ".jest-cache",
+    "cache": false,
     "coverageDirectory": "./coverage",
     "collectCoverage": true,
     "collectCoverageFrom": [
