--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "ini": "1.3.4",
     "json-stringify-pretty-compact": "1.0.4",
     "jsonwebtoken": "7.4.1",
+    "later": "1.2.0",
     "lodash": "4.17.4",
+    "moment": "2.18.1",
+    "moment-timezone": "0.5.13",
     "registry-auth-token": "3.3.1",
     "registry-url": "3.1.0",
     "root-require": "0.3.1",
@@ -79,6 +82,7 @@
     "freeform-semantic-commit-analyzer": "1.1.8",
     "jest": "20.0.4",
     "mkdirp": "0.5.1",
+    "mockdate": "2.0.1",
     "prettier": "1.5.2",
     "rimraf": "2.6.1",
     "semantic-release": "6.3.6"
