chore: re-enable jest cache (#400)

--- a/circle.yml
+++ b/circle.yml
@@ -12,8 +12,9 @@ dependencies:
   override:
     - yarn install --frozen-lockfile
   cache_directories:
-    - ~/.cache/yarn
+    - ~/.cache
     - ~/.yarn
+    - .cache
 
 test:
   override:
