Set master branch to tag next

--- a/package.json
+++ b/package.json
@@ -123,6 +123,9 @@
       }
     ]
   },
+  "publishConfig": {
+    "tag": "next"
+  },
   "release": {
     "analyzeCommits": {
       "path": "./node_modules/freeform-semantic-commit-analyzer/dist/index.js"
