--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0-semantic-release",
   "bin": "dist/renovate.js",
   "scripts": {
-    "build": "npm run transpile",
+    "build": "yarn && npm run transpile && cp -R lib/config/templates dist/config",
     "heroku-push": "git push heroku master",
     "heroku-scheduler": "heroku addons:open scheduler",
     "jest": "LOG_LEVEL=fatal jest",
@@ -17,7 +17,7 @@
     "test-dirty": "git diff --exit-code",
     "test": "npm run lint && npm run jest",
     "transpile": "rimraf dist && mkdirp dist && babel lib --out-dir dist",
-    "update-docs": "npm run transpile && bash bin/update-docs.sh",
+    "update-docs": "npm run build && bash bin/update-docs.sh",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
