fix: Install npm@5 in CI (#447)
Might help #445

--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
   pre:
     - bash bin/install-yarn.sh
     - yarn --version
+    - npm i -g npm@5
   override:
     - yarn install --frozen-lockfile
   cache_directories:
