--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ machine:
 
 dependencies:
   pre:
-    - bash bin/install-yarn.sh
+    - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.27.5
     - yarn --version
     - npm i -g npm@5
   override:
