--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "got": "7.1.0",
     "handlebars": "4.0.10",
     "ini": "1.3.4",
+    "json-dup-key-validator": "1.0.2",
     "json-stringify-pretty-compact": "1.0.4",
     "jsonwebtoken": "7.4.1",
     "later": "1.2.0",
