--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "chalk": "2.0.1",
     "changelog": "1.3.0",
     "commander": "2.11.0",
+    "conventional-commits-detector": "0.1.1",
     "gh-got": "6.0.0",
     "github-url-from-git": "1.5.0",
     "gl-got": "7.0.0",
