feat(yarn): Use embedded yarn version (#510)
Renovate now uses an embedded yarn binary. This way, the version of yarn used can be known + there is no requirement for Renovate admins to install yarn separately.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "heroku-push": "git push heroku master",
     "heroku-scheduler": "heroku addons:open scheduler",
     "jest": "LOG_LEVEL=fatal jest",
-    "lint-fix": "eslint --ignore-path .gitignore --fix .",
-    "lint": "eslint --ignore-path .gitignore .",
+    "lint-fix": "eslint --fix lib/**/*.js test/**/*.js",
+    "lint": "eslint lib/**/*.js test/**/*.js",
     "prepublishOnly": "npm run build",
     "start": "node dist/renovate",
     "start-babel": "babel-node lib/renovate",
