feat: Advanced package rules (#582)
- Renames `packages` to `packageRules`
- Refactor `packageName` to `packageNames` array
- Refactor `packagePattern` to `packagePatterns` array
- Adds `excludePackageNames` array
- Adds `excludePackagePatterns` array

Closes #529

--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "semanticCommits": true,
     "packages": [
       {
-        "packagePattern": "jest",
+        "packagePatterns": "jest",
         "groupName": "jest"
       }
     ]
