chore: update renovate config to use presets (#695)

--- a/package.json
+++ b/package.json
@@ -109,21 +109,14 @@
     "setupTestFrameworkScriptFile": "./test/chai.js"
   },
   "renovate": {
-    "labels": [
-      "ready"
+    "extends": [
+      ":app",
+      ":automergePatch",
+      ":automergeBranchPush",
+      "group:monorepos"
     ],
-    "assignees": [
-      "rarkins"
-    ],
-    "prCreation": "not-pending",
-    "automerge": "minor",
-    "rebaseStalePrs": true,
-    "packageRules": [
-      {
-        "packagePatterns": ["jest"],
-        "groupName": "jest"
-      }
-    ]
+    "labels": ["ready"],
+    "assignees": ["rarkins"]
   },
   "release": {
     "verifyConditions": "condition-circle"
