--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "changelog": "1.4.0",
     "commander": "2.11.0",
     "conventional-commits-detector": "0.1.1",
+    "fs-extra": "4.0.1",
     "gh-got": "6.0.0",
     "github-url-from-git": "1.5.0",
     "gl-got": "7.0.0",
@@ -115,8 +116,12 @@
       ":automergeBranchPush",
       "group:monorepos"
     ],
-    "labels": ["ready"],
-    "assignees": ["rarkins"]
+    "labels": [
+      "ready"
+    ],
+    "assignees": [
+      "rarkins"
+    ]
   },
   "release": {
     "verifyConditions": "condition-circle"
