chore: fix eslint (#793)
* fix eslint configuration

* run eslint fix

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "heroku-push": "git push heroku master",
     "heroku-scheduler": "heroku addons:open scheduler",
     "jest": "NODE_ENV=test LOG_LEVEL=fatal jest",
-    "lint-fix": "eslint --fix lib/**/*.js test/**/*.js",
-    "lint": "eslint lib/**/*.js test/**/*.js",
+    "lint-fix": "eslint --fix lib test",
+    "lint": "eslint lib test",
     "prepublishOnly": "npm run build",
     "start": "node dist/renovate",
     "start-babel": "babel-node lib/renovate",
