Add automerge linters configuration (#803)

--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
       ":app",
       ":automergePatch",
       ":automergeBranchPush",
-      "group:monorepos"
+      "group:monorepos",
+      ":automergeLinters"
     ],
     "labels": [
       "ready"
