feat: use yarn as a dependency (#806)
Renovate will now depend on yarn like any other dependency and call this version directly, instead of having an embedded version. This will allow us to "renovate" the yarn version we use too.

--- a/circle.yml
+++ b/circle.yml
@@ -1,13 +1,10 @@
 machine:
-  environment:
-    PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
-    YARN_PATH: "$HOME/.yarn"
   node:
     version: 6.9
 
 dependencies:
   pre:
-    - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.27.5
+    - npm i -g yarn
     - yarn --version
     - npm i -g npm@5
   override:
