--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "commander": "2.11.0",
     "conventional-commits-detector": "0.1.1",
     "fs-extra": "4.0.2",
+    "get-installed-path": "3.0.1",
     "gh-got": "6.0.0",
     "github-url-from-git": "1.5.0",
     "gl-got": "7.0.0",
