--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bunyan": "1.8.12",
     "chalk": "2.1.0",
     "changelog": "1.4.0",
+    "child-process-promise": "2.2.1",
     "commander": "2.11.0",
     "conventional-commits-detector": "0.1.1",
     "fs-extra": "4.0.2",
