--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "child-process-promise": "2.2.1",
     "commander": "2.11.0",
     "conventional-commits-detector": "0.1.1",
+    "convert-hrtime": "2.0.0",
     "fs-extra": "4.0.2",
     "get-installed-path": "3.0.1",
     "gh-got": "6.0.0",
