--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "rimraf": "2.6.2",
     "semantic-release": "7.0.2"
   },
+  "files": [
+    "dist"
+  ],
   "babel": {
     "plugins": [
       "transform-async-to-generator",
