--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "moment": "2.19.1",
     "moment-timezone": "0.5.13",
     "npm": "5.5.1",
+    "parse-link-header": "1.0.1",
     "registry-auth-token": "3.3.1",
     "root-require": "0.3.1",
     "semver": "5.4.1",
